@@ -1,0 +1,40 @@
+let black      = 0;;
+let red        = 1;;
+let green      = 2;;
+let yellow     = 3;;
+let blue       = 4;;
+let magenta    = 5;;
+let cyan       = 6;;
+let white      = 7;;
+let uncoloured = 8;;
+
+let foreground = [|
+  "";
+  "";
+  "";
+  "";
+  "";
+  "";
+  "";
+  "";
+  "";
+|];;
+
+let background = [|
+  "";
+  "";
+  "";
+  "";
+  "";
+  "";
+  "";
+  "";
+  "";
+|];;
+
+let move_to oc x = ()
+let up = ""
+let ceol = ""
+let home = ""
+let none = ""
+;;
